@@ -3414,6 +3414,11 @@ end
 				<ref>setformationsong</ref>
 			</seealso>
 		</command>
+		<command id="resetformation">
+			<canon>reset formation (formation)</canon>
+			<shortname>reset formation</shortname>
+			<description>Reset any scripted changes to <p>formation</p>. This script erases changes made with <ref>addenemytoformation</ref>, <ref>deleteenemyfromformation</ref>, <ref>setformationbackground</ref>, and <ref>setformationsong</ref> and changes the formation back to the way it was defined in the Formation Editor in custom.</description>
+		</command>
 		<command id="lastformation">
 			<canon>last formation</canon>
 			<shortname>last formation</shortname>
