@@ -2057,6 +2057,9 @@
 		<a href="#about-replaceweaponsprite">replace weapon sprite (handle, num, palette)</a><br>
 		
 	
+		<a href="#about-resetformation">reset formation (formation)</a><br>
+		
+	
 		<a href="#about-resetgame">reset game(args...)</a><br>
 		
 	
@@ -8535,6 +8538,16 @@ end
 			
 			<div class="seealso">See also: <ul><li><a href="#about-setformationsong" class="ref">set formation song</a></li></ul>
 </div>
+		</p>
+</div>
+		<div class="command">
+<a name="about-resetformation"></a>
+		<h4>reset formation (formation)</h4>
+<p>
+			Reset any scripted changes to <span class="param">formation</span>. This script erases changes made with <a href="#about-addenemytoformation" class="ref">add enemy to formation</a>, <a href="#about-deleteenemyfromformation" class="ref">delete enemy from formation</a>, <a href="#about-setformationbackground" class="ref">set formation background</a>, and <a href="#about-setformationsong" class="ref">set formation song</a> and changes the formation back to the way it was defined in the Formation Editor in custom.
+			
+			
+			
 		</p>
 </div>
 		<div class="command">
@@ -17896,7 +17909,7 @@ assert (check tag (tag:initialised) == OFF)  # something ought to be true at thi
 			</div>
 		<hr>
 		</div>
-<p>Stats: There are 805 commands and 75 constants in this file, of which 58 are only references to other entries.</p>
+<p>Stats: There are 806 commands and 75 constants in this file, of which 58 are only references to other entries.</p>
 <p>This file was generated from an XML file. The contents were painstakingly transcribed by Mike Caron from the original Plotscripting Dictionary, which was created by James Paige.</p>
 </body>
 </html>
