@@ -674,6 +674,7 @@ define function, begin
 650,setrectrawborder,2,0,-1   # set a rectangle slice to use a specific border sprite instead of the border for its style
 651,getrectrawborder,1,0      # set a rectangle slice to use a specific border sprite instead of the border for its style
 652,cloneslice,2,0,1          # Copy a slice (handle, recurse)
+653,resetformation,1,0        # resets any scripted modifications to a battle formation
 # Don't forget to update maxScriptCmdID in const.bi when adding new commands
 end
 
